refactor: jwt service, client login controller, auth service feat: AWS SeS, email service